# CMakeExample

./: CMakeExample.code-workspace  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
library1/: CMakeLists.txt  library1.cpp  library1.hpp
library1/tests/: CMakeLists.txt  assert_test.cpp  expect_test.cpp  library1_test.cpp
library2/: CMakeLists.txt  library2.cpp  library2.hpp
library2/tests/: CMakeLists.txt  library2_test.cpp
